--- a/react/package.json
+++ b/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "description": "Using React with Vite",
+  "description": "Manual React SPA",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
