--- a/react/package.json
+++ b/react/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.9",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
