--- a/five-projects-certificate/my-app/package.json
+++ b/five-projects-certificate/my-app/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "highlight.js": "^11.9.0",
     "jquery": "^3.7.1",
-    "marked": "^4.3.0",
+    "prismjs": "^1.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.9",
