--- a/five-projects-certificate/my-app/package.json
+++ b/five-projects-certificate/my-app/package.json
@@ -14,6 +14,8 @@
     "react-redux": "^7.2.9",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "use-debounce": "^10.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
