--- a/five-projects-certificate/my-app/package.json
+++ b/five-projects-certificate/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "highlight.js": "^11.9.0",
     "jquery": "^3.7.1",
+    "mathjs": "^13.0.2",
     "prismjs": "^1.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
